# pcea-aer-reproducibility

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: pcea_medium_cluster15_benchmark.json  train_pcea_medium_cluster15_benchmark_anti_idle.json  train_pcea_medium_cluster15_benchmark_full_1000.json  train_pcea_medium_cluster15_benchmark_pcea_anti_idle.json  train_pcea_medium_cluster15_benchmark_pcea_base.json  train_pcea_medium_cluster15_benchmark_pcea_cpeg.json  train_pcea_medium_cluster15_benchmark_ppo.json
datasets/alibaba_raw/: README.md
docs/: DATASET_BUILD.md  DATASET_FILTERING.md  EXPERIMENTS.md  METHOD_PCEA_AER.md  RESULT_SUMMARY.md
models/pcea_aer/: best_energy_pcea_ppo.pt
results/: README.md
results/00_sanity/: dataset_profile_summary.csv  smoke_metrics.csv  smoke_result.txt  workflow_structure_metrics.csv  workflow_structure_summary.csv
results/01_main_group5_workflow_anti_idle_default/: summary.csv
results/02_load_sensitivity_group1_5_10_anti_idle_default/: group_size_comparison.csv  load_metrics.csv  load_summary.csv
results/03_ablation_aer_anti_idle_default/: ablation_aer_metrics.csv  ablation_aer_summary.csv
results/04_pcea_component_ablation/: pcea_component_metrics.csv  pcea_component_summary.csv
results/05_aer_constraint_ablation/: aer_constraint_metrics.csv  aer_constraint_summary.csv
results/06_power_envelope_sensitivity/: group_manifest.csv  (+2 more)
scripts/: build_alibaba_pcea_dataset.py  evaluate_group5_benchmark.py  evaluate_pcea_aer.py
tests/: test_smoke_env.py
(+3068 files in other folders)
